Bug 690670 - Problem with tiffsep
Summary: Problem with tiffsep
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: 8.70
Hardware: PC Windows NT
: P2 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-30 10:14 UTC by Michael Vrhel
Modified: 2011-09-18 21:47 UTC (History)
0 users

See Also:
Customer: 330
Word Size: ---


Attachments
Bug_690670.diff (2.83 KB, patch)
2009-07-30 16:18 UTC, Michael Vrhel
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Vrhel 2009-07-30 10:14:52 UTC
Customer reports:

gswin32c -sDEVICE=tiffsep -sOutputFile=test.tif x010_L170_progressor_9.pdf

Gives:
_______________________________________________________________________________
__
GPL Ghostscript 8.70 (2009-07-28)
Copyright (C) 2009 Artifex Software, Inc.  All rights reserved.
This software comes with NO WARRANTY: see the file PUBLIC for details.
Processing pages 1 through 1.
Page 1
%%SeparationName: Fischer_black
%%SeparationName: PANTONE 485 C Vollton
Error: /rangecheck in --showpage--
Operand stack:
  1   true
Execution stack:
  %interp_exit   .runexec2   --nostringval--   --nostringval--   --nostringval-
-   2   %stopped_push   --nostringval--   --nostringval--   --nostringval--   
fa
lse   1   %stopped_push   1862   1   3   %oparray_pop   1861   1   3   %
oparray_
pop   1845   1   3   %oparray_pop   --nostringval--   --nostringval--   2   1
1   --nostringval--   %for_pos_int_continue   --nostringval--   --nostringval--
 1745   0   9   %oparray_pop   --nostringval--   --nostringval--
Dictionary stack:
  --dict:1154/1684(ro)(G)--   --dict:1/20(G)--   --dict:75/200(L)--   --dict:75
/200(L)--   --dict:106/127(ro)(G)--   --dict:285/300(ro)(G)--   --dict:22/25
(L)-
-   --dict:4/6(L)--   --dict:21/40(L)--
Current allocation mode is local
Last OS error: No such file or directory
GPL Ghostscript 8.70: Unrecoverable error, exit code 1
Comment 1 Michael Vrhel 2009-07-30 10:16:51 UTC
Created attachment 5256 [details]
bug_690670.pdf

File that causes problem
Comment 2 Michael Vrhel 2009-07-30 10:43:22 UTC
Setting -dNOTRANSPARENCY makes the issue go away.  Time to dig back into the 
transparency code...
Comment 3 Michael Vrhel 2009-07-30 12:02:50 UTC
I have a fix for this.  This was caused by the fact that we were setting the 
blending color space for a softmask to DeviceN when we have a sep device.  The 
blend color space was not defined and we end up going back and using the color 
space for the output device.  For a transparency group, this is OK as we blend 
the individual channels as defined in the PDF spec.  For a mask this is not 
OK, since we have to map to luminosity and the mapping from the process + spot 
colors to luminosity is not defined.  Solution is to use the concrete space of 
the current space of the imager state for the softmask for this situation.  
Comment 4 Michael Vrhel 2009-07-30 16:18:59 UTC
Created attachment 5258 [details]
Bug_690670.diff

Patch for this issue.  Will commit when we unfreeze for 8.7 release.
Comment 5 Masaki Ushizaka 2009-08-14 03:28:31 UTC
Using r9980, the job finished without error.  The patch was committed r9935.

---9935 log---
Fix for bug 690670.  Softmask color space was incorrectly getting set to DeviceN when the color space 
was undefined for the group and the output device was a separation device.

DETAILS:

For a transparency group, this method is OK as we blend the individual channels as defined in the PDF 
spec.  For a mask, this is not OK, since we have to map to luminosity and the mapping from the process 
+ spot colors to luminosity is not defined.  Solution is to use the concrete space of the current space of 
the imager state for the softmask for this situation.  

DIFFERENCES EXPECTED:

None
Comment 6 Ray Johnston 2009-08-14 09:47:26 UTC
This was fixed by the patch.
Comment 7 Marcos H. Woehrmann 2011-09-18 21:47:55 UTC
Changing customer bugs that have been resolved more than a year ago to closed.